docs: Этап 17.a-c OCR backend - ADR-041 + api-contract + roadmap + progress + backend/CLAUDE.md
- ADR-041 «OCR через Tess4j» (decisions.md): контекст / решение /
  rejected alternatives (GCV/PaddleOCR/Tika/sync OCR) / consequences /
  triggers to revisit / связанные ADR (019/024/035/039)
- api-contract.md: 6 новых endpoints (POST upload page image, POST/GET
  OCR, POST/GET/DELETE regions) + раздел «Что не реализовано в Этапе 17»
  + history entry с полным резюме breaking changes (PageResponse +6 полей)
- roadmap.md: 17.a/b/c/f отмечены [x]; 17.d помечен как
  реализованный неявно через idempotent POST /pages/{id}/ocr
- backend/CLAUDE.md: новая секция OCR (ADR-041) с инструкцией по
  установке tesseract-ocr + tesseract-ocr-ara/rus/eng на хост, gotcha
  про @EnabledIf("isTesseractAvailable") в OcrServiceIT
- progress.md: новая запись Сессии 42 с резюме, 7 коммитами, командами
  для ручной проверки (curl upload + OCR trigger + polling)

Backend dev :9090 restarted - migration 34 применена (Previously run:
33, Run: 1), 6 новых endpoints в /v3/api-docs (POST /books/{id}/pages,
POST/GET /pages/{id}/ocr, POST/GET/DELETE /pages/{id}/regions).
./mvnw clean verify: 646 tests pass (+24), 2 skipped (OcrServiceIT
без tesseract), 0 failures.